parser/xyndrilParser.py
# Generated from xyndril.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class xyndrilParser ( Parser ):

    grammarFileName = "xyndril.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "':'", "'='", "','", "';'", "'if'", 
                     "'('", "')'", "'else'", "'class'", "'{'", "'}'", "'constructor'", 
                     "'route'", "'GET'", "'POST'", "'PUT'", "'DELETE'", 
                     "'/'", "'true'", "'false'", "'null'", "'+'", "'-'", 
                     "'*'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'&&'", "'||'", "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ARROW", "NUMBER", "STRING", 
                      "IDENTIFIER", "DIGIT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_letStatement = 2
    RULE_assignmentStatement = 3
    RULE_assignment = 4
    RULE_ifStatement = 5
    RULE_classDeclaration = 6
    RULE_classBody = 7
    RULE_classElement = 8
    RULE_propertyDeclaration = 9
    RULE_methodDeclaration = 10
    RULE_constructorDeclaration = 11
    RULE_routeDefinition = 12
    RULE_httpMethod = 13
    RULE_pathPattern = 14
    RULE_parameterList = 15
    RULE_parameter = 16
    RULE_block = 17
    RULE_expressionStatement = 18
    RULE_expression = 19
    RULE_assignmentExpression = 20
    RULE_arrowFunction = 21
    RULE_binaryExpression = 22
    RULE_unaryExpression = 23
    RULE_primaryExpression = 24
    RULE_functionCall = 25
    RULE_argumentList = 26
    RULE_literal = 27
    RULE_identifier = 28
    RULE_typeName = 29
    RULE_binaryOp = 30

    ruleNames =  [ "program", "statement", "letStatement", "assignmentStatement", 
                   "assignment", "ifStatement", "classDeclaration", "classBody", 
                   "classElement", "propertyDeclaration", "methodDeclaration", 
                   "constructorDeclaration", "routeDefinition", "httpMethod", 
                   "pathPattern", "parameterList", "parameter", "block", 
                   "expressionStatement", "expression", "assignmentExpression", 
                   "arrowFunction", "binaryExpression", "unaryExpression", 
                   "primaryExpression", "functionCall", "argumentList", 
                   "literal", "identifier", "typeName", "binaryOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    ARROW=34
    NUMBER=35
    STRING=36
    IDENTIFIER=37
    DIGIT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(xyndrilParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.StatementContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.StatementContext,i)


        def getRuleIndex(self):
            return xyndrilParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = xyndrilParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 240525526210) != 0):
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(xyndrilParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatement(self):
            return self.getTypedRuleContext(xyndrilParser.LetStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(xyndrilParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(xyndrilParser.IfStatementContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(xyndrilParser.ClassDeclarationContext,0)


        def routeDefinition(self):
            return self.getTypedRuleContext(xyndrilParser.RouteDefinitionContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(xyndrilParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = xyndrilParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.letStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.assignmentStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.classDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.routeDefinition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.IdentifierContext,i)


        def typeName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.TypeNameContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.TypeNameContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.ExpressionContext,i)


        def getRuleIndex(self):
            return xyndrilParser.RULE_letStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)




    def letStatement(self):

        localctx = xyndrilParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_letStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(xyndrilParser.T__0)
            self.state = 79
            self.identifier()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 80
                self.match(xyndrilParser.T__1)
                self.state = 81
                self.typeName()


            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 84
                self.match(xyndrilParser.T__2)
                self.state = 85
                self.expression()


            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 88
                self.match(xyndrilParser.T__3)
                self.state = 89
                self.identifier()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 90
                    self.match(xyndrilParser.T__1)
                    self.state = 91
                    self.typeName()


                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 94
                    self.match(xyndrilParser.T__2)
                    self.state = 95
                    self.expression()


                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(xyndrilParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(xyndrilParser.IdentifierContext,0)


        def expression(self):
            return self.getTypedRuleContext(xyndrilParser.ExpressionContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = xyndrilParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.identifier()
            self.state = 106
            self.match(xyndrilParser.T__2)
            self.state = 107
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(xyndrilParser.IdentifierContext,0)


        def expression(self):
            return self.getTypedRuleContext(xyndrilParser.ExpressionContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = xyndrilParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.identifier()
            self.state = 110
            self.match(xyndrilParser.T__2)
            self.state = 111
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(xyndrilParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.BlockContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.BlockContext,i)


        def ifStatement(self):
            return self.getTypedRuleContext(xyndrilParser.IfStatementContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = xyndrilParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(xyndrilParser.T__5)
            self.state = 114
            self.match(xyndrilParser.T__6)
            self.state = 115
            self.expression()
            self.state = 116
            self.match(xyndrilParser.T__7)
            self.state = 117
            self.block()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 118
                self.match(xyndrilParser.T__8)
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11]:
                    self.state = 119
                    self.block()
                    pass
                elif token in [6]:
                    self.state = 120
                    self.ifStatement()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(xyndrilParser.IdentifierContext,0)


        def classBody(self):
            return self.getTypedRuleContext(xyndrilParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = xyndrilParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(xyndrilParser.T__9)
            self.state = 126
            self.identifier()
            self.state = 127
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.ClassElementContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.ClassElementContext,i)


        def getRuleIndex(self):
            return xyndrilParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = xyndrilParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(xyndrilParser.T__10)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438978048) != 0):
                self.state = 130
                self.classElement()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(xyndrilParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propertyDeclaration(self):
            return self.getTypedRuleContext(xyndrilParser.PropertyDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(xyndrilParser.MethodDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(xyndrilParser.ConstructorDeclarationContext,0)


        def routeDefinition(self):
            return self.getTypedRuleContext(xyndrilParser.RouteDefinitionContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_classElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassElement" ):
                listener.enterClassElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassElement" ):
                listener.exitClassElement(self)




    def classElement(self):

        localctx = xyndrilParser.ClassElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_classElement)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.propertyDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.methodDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.constructorDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.routeDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(xyndrilParser.IdentifierContext,0)


        def typeName(self):
            return self.getTypedRuleContext(xyndrilParser.TypeNameContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_propertyDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyDeclaration" ):
                listener.enterPropertyDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyDeclaration" ):
                listener.exitPropertyDeclaration(self)




    def propertyDeclaration(self):

        localctx = xyndrilParser.PropertyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_propertyDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.identifier()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 145
                self.match(xyndrilParser.T__1)
                self.state = 146
                self.typeName()


            self.state = 149
            self.match(xyndrilParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(xyndrilParser.IdentifierContext,0)


        def block(self):
            return self.getTypedRuleContext(xyndrilParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(xyndrilParser.ParameterListContext,0)


        def ARROW(self):
            return self.getToken(xyndrilParser.ARROW, 0)

        def typeName(self):
            return self.getTypedRuleContext(xyndrilParser.TypeNameContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = xyndrilParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.identifier()
            self.state = 152
            self.match(xyndrilParser.T__6)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 153
                self.parameterList()


            self.state = 156
            self.match(xyndrilParser.T__7)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 157
                self.match(xyndrilParser.ARROW)
                self.state = 158
                self.typeName()


            self.state = 161
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(xyndrilParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(xyndrilParser.ParameterListContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_constructorDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDeclaration" ):
                listener.enterConstructorDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDeclaration" ):
                listener.exitConstructorDeclaration(self)




    def constructorDeclaration(self):

        localctx = xyndrilParser.ConstructorDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_constructorDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(xyndrilParser.T__12)
            self.state = 164
            self.match(xyndrilParser.T__6)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 165
                self.parameterList()


            self.state = 168
            self.match(xyndrilParser.T__7)
            self.state = 169
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RouteDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def httpMethod(self):
            return self.getTypedRuleContext(xyndrilParser.HttpMethodContext,0)


        def pathPattern(self):
            return self.getTypedRuleContext(xyndrilParser.PathPatternContext,0)


        def block(self):
            return self.getTypedRuleContext(xyndrilParser.BlockContext,0)


        def getRuleIndex(self):
            return xyndrilParser.RULE_routeDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRouteDefinition" ):
                listener.enterRouteDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRouteDefinition" ):
                listener.exitRouteDefinition(self)




    def routeDefinition(self):

        localctx = xyndrilParser.RouteDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_routeDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(xyndrilParser.T__13)
            self.state = 172
            self.httpMethod()
            self.state = 173
            self.pathPattern()
            self.state = 174
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HttpMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return xyndrilParser.RULE_httpMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHttpMethod" ):
                listener.enterHttpMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHttpMethod" ):
                listener.exitHttpMethod(self)




    def httpMethod(self):

        localctx = xyndrilParser.HttpMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_httpMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathPatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.IdentifierContext,i)


        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(xyndrilParser.DIGIT)
            else:
                return self.getToken(xyndrilParser.DIGIT, i)

        def getRuleIndex(self):
            return xyndrilParser.RULE_pathPattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPathPattern" ):
                listener.enterPathPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPathPattern" ):
                listener.exitPathPattern(self)




    def pathPattern(self):

        localctx = xyndrilParser.PathPatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_pathPattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(xyndrilParser.T__18)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 412317384708) != 0):
                self.state = 184
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [37]:
                    self.state = 179
                    self.identifier()
                    pass
                elif token in [2]:
                    self.state = 180
                    self.match(xyndrilParser.T__1)
                    self.state = 181
                    self.identifier()
                    pass
                elif token in [19]:
                    self.state = 182
                    self.match(xyndrilParser.T__18)
                    pass
                elif token in [38]:
                    self.state = 183
                    self.match(xyndrilParser.DIGIT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xyndrilParser.ParameterContext)
            else:
                return self.getTypedRuleContext(xyndrilParser.ParameterContext,i)


        def getRuleIndex(self):
            return xyndrilParser.RULE_parameterList
